--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "knex": "^3.1.0",
+    "node-cache": "^5.1.2",
     "nodemailer": "^6.9.16",
     "path": "^0.12.7"
   }
